Fixed CSS z-index for modal so above Trans text and Sidemenu.

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,6 @@ h1 input:focus {
 	height: 100%;
 	top: 0;
 	left: 0;
-	/* z-index: 9999; */
 }
 
 .title-effect-servo {
@@ -267,7 +266,6 @@ h1 input:focus {
 	bottom: 0;
 	font-size: 1.2em;
 	left: -9999px;
-	/* z-index: 9998; */
 	line-height: 140%;
 	-webkit-transition-property: -webkit-transform;
 	-moz-transition-property: -moz-transform;
@@ -283,7 +281,7 @@ h1 input:focus {
 	width: 280px;
 	height: 100%;
 	background: #222;
-	z-index: 999;
+	z-index: 100;
 	border-right: 4px solid #387847;
 	-webkit-transform: translate(-100%, 0) translateZ(0);
 	-moz-transform: translate(-100%, 0) translateZ(0);
@@ -679,6 +677,7 @@ h1 input:focus {
 	left:0;
 	width: 100%;
 	height: 100%;
+	z-index: 200;
 	display:none;
 }
 .modal .modal-mask {
